# kittymod

./: .gitignore  README.md  pyproject.toml
src/kittymod/: __init__.py  bot.py  client.py  config.py  database.py
src/kittymod/client/: __init__.py
